{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 85,
  "lineage": "b37aa370-8510-235e-2dbf-3a0e71bc4971",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875456072639:internet-gateway/igw-02b4fec3d1ae54045",
            "id": "igw-02b4fec3d1ae54045",
            "owner_id": "875456072639",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0b74911f824cf29fa"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875456072639:route-table/rtb-09fcea04402d36f57",
            "id": "rtb-09fcea04402d36f57",
            "owner_id": "875456072639",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b4fec3d1ae54045",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-route-table"
            },
            "tags_all": {
              "Name": "eks-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b74911f824cf29fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083368e8a84bb148d",
            "route_table_id": "rtb-09fcea04402d36f57",
            "subnet_id": "subnet-0228d3e089113cf20"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.main",
            "module.networking.aws_subnet.main_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077cad7ec31542c75",
            "route_table_id": "rtb-09fcea04402d36f57",
            "subnet_id": "subnet-07517786ef861ba25"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.main",
            "module.networking.aws_subnet.main_subnet",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875456072639:security-group/sg-0d087e32b26e8536e",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d087e32b26e8536e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks_node_sg",
            "name_prefix": "",
            "owner_id": "875456072639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-node-group-sg"
            },
            "tags_all": {
              "Name": "eks-node-group-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b74911f824cf29fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875456072639:subnet/subnet-0228d3e089113cf20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0228d3e089113cf20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "875456072639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-subnet-0"
            },
            "tags_all": {
              "Name": "eks-subnet-0"
            },
            "vpc_id": "vpc-0b74911f824cf29fa"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875456072639:subnet/subnet-07517786ef861ba25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07517786ef861ba25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "875456072639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-subnet-1"
            },
            "tags_all": {
              "Name": "eks-subnet-1"
            },
            "vpc_id": "vpc-0b74911f824cf29fa"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:875456072639:vpc/vpc-0b74911f824cf29fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08eab76d1a0f3e7fc",
            "default_route_table_id": "rtb-0f3ce5648747f5bbd",
            "default_security_group_id": "sg-0d2697b7a0a274e93",
            "dhcp_options_id": "dopt-0dbb9b78c53e397e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b74911f824cf29fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3ce5648747f5bbd",
            "owner_id": "875456072639"
          }
        }
      ]
    }
  ]
}